apps/production/apps/disabled/headlamp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: headlamp.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: cilium-gateway
  hostnames:
    - headlamp.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
